SLCORE-716 Fix code smells consecutive to Java 17 migration