@@ -24,7 +24,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 import javax.annotation.CheckForNull;
 import javax.annotation.Nullable;
 import javax.annotation.PreDestroy;
@@ -136,7 +135,7 @@ public class AnalysisEngineCache {
     return leafConfigScopeIds.stream().map(scopeId -> {
       var backendModuleFileSystem = new BackendModuleFileSystem(clientFileSystemService, scopeId);
       return new ClientModuleInfo(scopeId, backendModuleFileSystem);
-    }).collect(Collectors.toList());
+    }).toList();
   }
 
   @EventListener
