@@ -44,8 +44,6 @@ import org.sonarsource.sonarlint.core.rpc.protocol.common.ClientFileDto;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.context.event.EventListener;
 
-import static java.util.stream.Collectors.toList;
-
 @Named
 @Singleton
 public class ClientFileSystemService {
@@ -102,13 +100,13 @@ public class ClientFileSystemService {
   public List<ClientFile> findFilesByNamesInScope(String configScopeId, List<String> filenames) {
     return getFiles(configScopeId).stream()
       .filter(f -> filenames.contains(f.getClientRelativePath().getFileName().toString()))
-      .collect(toList());
+      .toList();
   }
 
   public List<ClientFile> findSonarlintConfigurationFilesByScope(String configScopeId) {
     return getFiles(configScopeId).stream()
       .filter(ClientFile::isSonarlintConfigurationFile)
-      .collect(toList());
+      .toList();
   }
 
   public Map<URI, ClientFile> initializeFileSystem(String configScopeId, SonarLintCancelMonitor cancelMonitor) {
